# rocketmq-ons-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  package.sh  pom.xml
doc/: Introduction.md  QuickStart.md  changelog
graalvm_artifacts/: rocketmq-ons-cpp-full.h  rocketmq-ons-cpp-full_dynamic.h
licenses/: LICENSE-BIN  NOTICE-BIN
src/main/c/include/: CCommon.h
src/main/c/native/: rocketmq.h
src/main/cpp/benchmark/: CMakeLists.txt  ExampleBenchmark.cpp  ProducerBenchmark.cpp
src/main/cpp/demos/: CMakeLists.Release  CMakeLists.txt  ConsumerDemo.cpp  MultiThreadProducerDemo.cpp  OrderConsumerDemo.cpp  OrderProducerDemo.cpp  ProducerAsyncDemo.cpp  ProducerDemo.cpp  ProducerOnewayDemo.cpp  TransactionProducerDemo.cpp
src/main/cpp/include/: Action.h  ConsumeContext.h  ConsumeOrderContext.h  LocalTransactionChecker.h  LocalTransactionExecuter.h  Message.h  MessageListener.h  MessageOrderListener.h  MessageQueueONS.h  MessageQueueSelectorONS.h  ONSCallback.h  ONSChannel.h  ONSClient.h  ONSClientException.h  ONSFactory.h  OrderAction.h  OrderConsumer.h  OrderProducer.h  Producer.h  PullConsumer.h  PullResultONS.h  PushConsumer.h  SendResultONS.h  TransactionProducer.h  TransactionStatus.h
src/main/cpp/sdk/: CMakeLists.txt  ClientBase.cpp  ClientBase.h  ConsumerImpl.cpp  ConsumerImpl.h  Message.cpp  MessageQueueONS.cpp  ONSClientException.cpp  ONSFactory.cpp  OrderConsumerImpl.cpp  OrderConsumerImpl.h  OrderProducerImpl.cpp  OrderProducerImpl.h  ProducerImpl.cpp  ProducerImpl.h  RocketMQClient.h  SendResultONS.cpp  TransactionProducerImpl.cpp  TransactionProducerImpl.h
src/main/cpp/sdk/common/: Common.h  Logger.cpp  Logger.h  ONSClientAbstract.cpp  ONSClientAbstract.h  UtilAll.cpp  UtilAll.h
src/main/cpp/sdk/common/rapidjson/: allocators.h  cursorstreamwrapper.h  document.h  encodedstream.h  encodings.h  filereadstream.h  filewritestream.h  fwd.h  istreamwrapper.h  memorybuffer.h  memorystream.h  ostreamwrapper.h  pointer.h  prettywriter.h  rapidjson.h  reader.h  schema.h  stream.h  stringbuffer.h  writer.h
src/main/cpp/sdk/common/rapidjson/error/: en.h  error.h
src/main/cpp/sdk/common/rapidjson/internal/: biginteger.h  diyfp.h  dtoa.h  ieee754.h  itoa.h  meta.h  pow10.h  regex.h  stack.h  strfunc.h  strtod.h  swap.h
src/main/cpp/sdk/common/rapidjson/msinttypes/: inttypes.h  stdint.h
src/main/cpp/sdk/common/spdlog/: async.h  async_logger.h  common.h  formatter.h  logger.h  spdlog.h  tweakme.h  version.h
src/main/cpp/sdk/common/spdlog/details/: async_logger_impl.h  circular_q.h  console_globals.h  file_helper.h  fmt_helper.h  log_msg.h  logger_impl.h  mpmc_blocking_q.h  null_mutex.h  os.h  pattern_formatter.h  periodic_worker.h  registry.h  thread_pool.h
src/main/cpp/sdk/common/spdlog/fmt/: bin_to_hex.h  fmt.h  ostr.h
src/main/cpp/sdk/common/spdlog/fmt/bundled/: chrono.h  color.h  core.h  format-inl.h  format.h  locale.h  ostream.h  posix.h  printf.h  ranges.h  time.h
src/main/cpp/sdk/common/spdlog/sinks/: android_sink.h  ansicolor_sink.h  base_sink.h  basic_file_sink.h  daily_file_sink.h  dist_sink.h  msvc_sink.h  null_sink.h  ostream_sink.h  rotating_file_sink.h  sink.h  stdout_color_sinks.h  stdout_sinks.h  syslog_sink.h  systemd_sink.h  wincolor_sink.h
src/main/java/org/apache/rocketmq/graalvm/: CInterface.java  ErrorCode.java  GraalMessageListener.java  GraalMessageOrderListener.java  GraalSendCallback.java  GraalTransactionChecker.java  GraalTransactionExecutor.java
src/main/java/org/apache/rocketmq/graalvm/substitutions/: NettySubstitutions.java
src/test/c/: CMakeLists.txt  CProducerTest.cpp  CPushConsumerTest.cpp
src/test/cpp/: ApiTest.cpp  BaseTest.h  CMakeLists.txt  ClientBaseTest.h  ConsumerTest.cpp  ExampleTest.cpp  GraalThreadTest.cpp  LayoutTest.cpp  LoggerTest.cpp  MessageTest.cpp  OrderClientBaseTest.h  OrderProducerTest.cpp  ProducerTest.cpp  PropertyTest.cpp  TransactionTest.cpp
src/test/java/org/apache/rocketmq/graalvm/: CInterfaceTest.java
tools/graal/: README.md  reflection_config.json
